Change footer height to 'max-content' in CSS to fix issues of excessive vertical spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@
 /*footer*/
   
   footer {
-    height: 150px;
+    height: max-content;
     background-color: #b7d9b1;
     }
 
